# spoonacular_api

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
spoonacular_api/: spoonacular_api.py
src/spoonacular_api/: __init__.py
tests/: test_spoonacular_api.py
